# RCE

./: .gitignore  .pre-commit-config.yaml  .vimspector.json  Cargo.toml  LICENSE  README.md  clippy.toml  makefile
.github/workflows/: rust.yml
src/: bench.rs  board.rs  evaluate.rs  logger.rs  main.rs  search.rs  testing_utils.rs  uci.rs  utils.rs
src/board/: bitboard.rs  bitboards.rs  boardbuilder.rs  mod.rs  piece.rs  piece_bitboards.rs  ply.rs  serialize.rs  square.rs  transposition_table.rs  zkey.rs
src/board/bitboards/: builder.rs
src/board/piece/: bishop.rs  king.rs  knight.rs  mod.rs  pawn.rs  queen.rs  rook.rs  sliding.rs
src/board/piece_bitboards/: builder.rs
src/board/ply/: builder.rs  castling.rs  mod.rs
src/board/square/: mod.rs  rays.rs
src/evaluate/: simple_evaluator.rs
src/search/: info.rs  limits.rs  move_orderer.rs
src/search/move_orderer/: score_bonus.rs  scored_ply.rs
src/uci/: uci_command.rs  uci_option.rs
