[package]
name = "rust_chess_engine"
version = "0.1.0"
description = "A chess engine written in Rust."
authors = ["Brandon Harrison"]
repository = "https://github.com/BrandonHarrisonCode/RCE"
readme = "README.md"
license = "MIT"
keywords = ["chess", "engine", "ai"]
categories = ["games"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
indoc = "2.0.3"
parking_lot = "0.12.3"
rand = "0.8.5"
strum = "0.26.1"
strum_macros = "0.26.1"

[dev-dependencies]
pretty_assertions = "1.4.0"
